--- a/product.css
+++ b/product.css
@@ -381,7 +381,7 @@ ul li {
 
     .add-another button {
         font-size: 14px;
-        background: linear-gradient(to right, #57cc99, #2dc653);
+        background: linear-gradient(to right, #57cc99, #003566);
         color: white;
         padding: 12px 20px;
         border: none;
