--- a/product.css
+++ b/product.css
@@ -323,7 +323,7 @@ ul li {
     border-radius: 12px;
     padding: 20px;
     background: linear-gradient(white, white) padding-box,
-                linear-gradient(to right, #3b82f6, #8b5cf6) border-box;
+                linear-gradient(to right, #57cc99, #003566) border-box;
     }
 
     .selection-row label, 
@@ -381,7 +381,7 @@ ul li {
 
     .add-another button {
         font-size: 14px;
-        background: linear-gradient(to right, #003566, #57cc99);
+        background: linear-gradient(to right, #57cc99, #003566);
         color: white;
         padding: 12px 20px;
         border: none;
@@ -392,7 +392,7 @@ ul li {
     .submit-btn {
         width: 100%;
         padding: 15px;
-        background: linear-gradient(to right, #3b82f6, #8b5cf6);
+        background: linear-gradient(to right, #57cc99, #003566);
         color: white;
         border: none;
         border-radius: 4px;
@@ -426,7 +426,7 @@ ul li {
     }
     
     .contact-banner {
-        background: linear-gradient(to right, #3b82f6, #8b5cf6);
+        background: linear-gradient(to right, #57cc99, #003566);
         color: white;
         padding: 10px 0; /* Top/bottom padding only */
         margin: 0; /* No side margins */
