--- a/product.css
+++ b/product.css
@@ -202,7 +202,7 @@ h1 {
 .submit-btn {
     width: 100%;
     padding: 15px;
-    background: #0078ff;
+    background: linear-gradient(to right, #57cc99, #003566);
     color: white;
     border: none;
     border-radius: 4px;
@@ -241,7 +241,7 @@ ul li {
 
 .add-another button {
     font-size: 14px;
-    background-color: #0078ff;
+    background: linear-gradient(to right, #57cc99, #003566);
     color: white;
     padding: 12px 20px;
     border: none;
