--- a/product.css
+++ b/product.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo+Play:wght@200..1000&display=swap');
 
 * {
     font-family: 'Tajawal', sans-serif;
@@ -92,6 +93,7 @@ body {
 
 /* Product Info */
 h1 {
+    font-family: 'Cairo Play', sans-serif;
     font-size: 28px;
     margin-bottom: 10px;
     color: #333;
@@ -99,6 +101,7 @@ h1 {
 }
 
 .price {
+    font-family: 'Cairo Play', sans-serif;
     color: #e60023;
     font-size: 24px;
     font-weight: bold;
