--- a/product.css
+++ b/product.css
@@ -256,12 +256,6 @@ ul li {
 
 .mobile-description {
     display: none;
-    margin-top: 20px;
-    line-height: 1.8;
-    color: #555;
-    font-size: 17px;
-    border-right: 2px solid #f0f0f0;
-    padding-right: 15px;
 }
 
 /* Mobile Styles */
@@ -314,14 +308,24 @@ ul li {
         font-size: 20px;
         text-align: center;
     }
-
-    .description {
-        font-size: 16px;
-        padding-right: 10px;
-        border-right: 2px solid #f0f0f0;
-    }
     
-    .description p span {
+    .mobile-description {
+    margin: 20px 0;
+    line-height: 1.8;
+    color: #555;
+    font-size: 17px;
+    border-right: 2px solid #f0f0f0;
+    padding-right: 15px;
+}
+
+.mobile-description p {
+    margin: 0;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+    
+    .mobile-description p span {
         font-weight: 600;
         display: block; /* Optional: ensures centering works */
     }
