--- a/product.css
+++ b/product.css
@@ -407,6 +407,11 @@ ul li {
         text-align: right;
     }
 
+    .form-row {
+    position: relative;
+    margin-bottom: 15px;
+    }
+
     .form-row textarea {
         min-height: 100px;
         resize: vertical;
